preprocessor/3951 	* cppinit.c (init_dependency_output): Take deps output file 	from -o if none given with -MF.  Suppress normal output. 	* gcc.c (cpp_unique_options): Have -M and -MM imply -E. 	* doc/cpp.texi, doc/invoke.texi: Update.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50602 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_0-branch/gcc/ChangeLog
+++ b/gcc-3_0-branch/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-03-11  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	preprocessor/3951
+	* cppinit.c (init_dependency_output): Take deps output file
+	from -o if none given with -MF.  Suppress normal output.
+	* gcc.c (cpp_unique_options): Have -M and -MM imply -E.	
+	* doc/cpp.texi, doc/invoke.texi: Update.
+
 2002-03-01  Zack Weinberg  <zack@codesourcery.com>
 
 	* doc/cpp.texi: Clarify documentation of relationship between
