* toplev.c (rest_of_compilation): Don't compile if we've had errors.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50604 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-11  Richard Henderson  <rth@redhat.com>
+
+	* g++.old-deja/g++.brendan/crash52.C: Remove return warning marker.
+	* g++.old-deja/g++.jason/report.C: Likewise.
+
 2002-03-11  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* testsuite/g++.old-deja/g++.other/friend9.C: Revert DR 209 changes.
