--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,11 +1,14 @@
+2002-03-11  Richard Henderson  <rth@redhat.com>
+
+	* toplev.c (rest_of_compilation): Don't compile if we've had errors.
+
 2002-03-11  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* Makefile.in: Update.
-doc:
-	* cppenv.texi, cppopts.texi: Split out of cpp.texi and gcc.texi.
+	* doc/cppenv.texi, cppopts.texi: Split out of cpp.texi and gcc.texi.
 	Update documentation.
-	* gcc.texi: Include cppopts.texi and cppenv.texi.
-	* cpp.texi: Include cppopts.texi and cppenv.texi.
+	* doc/gcc.texi: Include cppopts.texi and cppenv.texi.
+	* doc/cpp.texi: Include cppopts.texi and cppenv.texi.
 
 2002-03-11  Zack Weinberg  <zack@codesourcery.com>
 
