--- a/gcc-3_1-branch/gcc/ada/ChangeLog
+++ b/gcc-3_1-branch/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-11  Richard Henderson  <rth@redhat.com>
+
+	* Makefile.in (.NOTPARALLEL): Add fake tag.
+
 2002-02-07  Richard Henderson  <rth@redhat.com>
 
 	* adaint.c (__gnat_to_gm_time): First arg is int, not time_t.
