--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-11  Richard Henderson  <rth@redhat.com>
+
+	* Makefile.in (.NOTPARALLEL): Add fake tag.
+
 2002-03-07  Geert Bosch  <bosch@gnat.com>
 
 	* adadecode.c, adadecode.h, aux-io.c, s-traces.adb, s-traces.ads, 
