--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-11  Richard Henderson  <rth@redhat.com>
+
+	* rtlanal.c: Include recog.h.
+	(keep_with_call_p): Fix thinko.
+	* Makefile.in (rtlanal.o): Update dependencies.
+
 2002-03-11  Chris Meyer  <cmeyer@gatan.com>
 
 	* genflags.c (gen_insn): Use IS_VSPACE.
