--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-11  Aldy Hernandez  <aldyh@redhat.com>
+
+        * gcc.dg/altivec-1.c: Cleanup and use altivec.h.
+
 2002-03-11  Richard Henderson  <rth@redhat.com>
 
 	* g++.old-deja/g++.brendan/crash52.C: Remove return warning marker.
