* config/cris/cris.c (cris_target_asm_function_prologue):  Do not 	emit pic register load if "internal" visibility. 	(cris_print_operand): Avoid traditional-warning for 0xffffffff. 	(cris_expand_builtin_va_arg): Do all computations on trees.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50627 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-03-12  Hans-Peter Nilsson  <hp@axis.com>
+
+	* config/cris/cris.c (cris_target_asm_function_prologue):  Do not
+	emit pic register load if "internal" visibility.
+	(cris_print_operand): Avoid traditional-warning for 0xffffffff.
+	(cris_expand_builtin_va_arg): Do all computations on trees.
+
 2002-03-11  Richard Henderson  <rth@redhat.com>
 
 	* rtlanal.c: Include recog.h.
