--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-11  Richard Henderson  <rth@redhat.com>
+
+	* toplev.c (rest_of_compilation): Call purge_all_dead_edges
+	if rebuild_label_notes_after_reload.
+
 2002-03-12  Hans-Peter Nilsson  <hp@axis.com>
 
 	* config/cris/cris.c (cris_target_asm_function_prologue):  Do not
