2002-03-11  Eric Blake  <ebb9@email.byu.edu>
	Fix for PR java/5902:
	* lex.c (java_lex): Fix parsing of literals.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50631 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/java/ChangeLog
+++ b/gcc-3_1-branch/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-11  Eric Blake  <ebb9@email.byu.edu>
+
+	Fix for PR java/5902:
+	* lex.c (java_lex): Fix parsing of literals.
+
 2002-03-11  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* parse.y (patch_assignment): Wrap the right-hand-side with a save_expr
