2002-03-11  Eric Blake  <ebb9@email.byu.edu>
	* lex.c: Adjust comments to GNU standards.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50632 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/java/ChangeLog
+++ b/gcc-3_1-branch/gcc/java/ChangeLog
@@ -1,5 +1,9 @@
 2002-03-11  Eric Blake  <ebb9@email.byu.edu>
 
+	* lex.c: Adjust comments to GNU standards.
+
+2002-03-11  Eric Blake  <ebb9@email.byu.edu>
+
 	Fix for PR java/5902:
 	* lex.c (java_lex): Fix parsing of literals.
 
