* mn10200.h (PTRDIFF_TYPE): Change it to a signed type.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50633 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-12  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* mn10200.h (PTRDIFF_TYPE): Change it to a signed type.
+
 2002-03-11  Richard Henderson  <rth@redhat.com>
 
 	* toplev.c (rest_of_compilation): Call purge_all_dead_edges
