* 1750a.h, a29k.h, arc.h, arm.h, c4x.h, clipper.h, cris.h, d30v.h, 	dsp16xx.h, fr30.h, h8300.h, i370.h, i386.h, i860.h, i960.h, 	m32r.h, m68hc11.h, m68k.h, m88k.h, mcore.h, mmix.h, mn10300.h, 	ns32k.h, pa.h, pdp11.h, pj.h, romp.h, s390.h, stormy16.h, 	v850.h, vax.h, we32k.h, xtensa.h (POINTER_SIZE): Delete. 	* defaults.h (POINTER_SIZE): Define. 	* doc/tm.texi (POINTER_SIZE): Document default.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50634 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/doc/tm.texi
+++ b/gcc/doc/tm.texi
@@ -951,7 +951,8 @@ smallest value that @code{UNITS_PER_WORD} can have at run-time.
 @item POINTER_SIZE
 Width of a pointer, in bits.  You must specify a value no wider than the
 width of @code{Pmode}.  If it is not equal to the width of @code{Pmode},
-you must define @code{POINTERS_EXTEND_UNSIGNED}.
+you must define @code{POINTERS_EXTEND_UNSIGNED}.  If you do not specify
+a value the default is @code{BITS_PER_WORD}.
 
 @findex POINTERS_EXTEND_UNSIGNED
 @item POINTERS_EXTEND_UNSIGNED
