--- a/gcc-3_1-branch/libjava/testsuite/ChangeLog
+++ b/gcc-3_1-branch/libjava/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-12  Eric Blake  <ebb9@email.byu.edu>
+
+	* libjava.compile/PR5913.java: Expand test.
+
 2002-03-11  Eric Blake  <ebb9@email.byu.edu>
 
 	* libjava.compile/PR5902.java: New file.
