--- a/gcc-3_1-branch/gcc/java/ChangeLog
+++ b/gcc-3_1-branch/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-12  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* jcf-write.c (write_classfile): Improve error strings.
+
 2002-03-11  Eric Blake  <ebb9@email.byu.edu>
 
 	* lex.c: Adjust comments to GNU standards.
