--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -1631,7 +1631,7 @@
 		 ? operands[0] : gen_reg_rtx (SImode));
 
       HOST_WIDE_INT val = INTVAL (operands[2]);
-      HOST_WIDE_INT low = (val & 0xffff) - 2 * (val & 0x8000);
+      HOST_WIDE_INT low = ((val & 0xffff) ^ 0x8000) - 0x8000;
       HOST_WIDE_INT rest = trunc_int_for_mode (val - low, SImode);
 
       /* The ordering here is important for the prolog expander.
@@ -1740,7 +1740,7 @@
 "
 {
   HOST_WIDE_INT val = INTVAL (operands[2]);
-  HOST_WIDE_INT low = (val & 0xffff) - 2 * (val & 0x8000);
+  HOST_WIDE_INT low = ((val & 0xffff) ^ 0x8000) - 0x8000;
   HOST_WIDE_INT rest = trunc_int_for_mode (val - low, SImode);
 
   operands[3] = GEN_INT (rest);
@@ -2538,7 +2538,7 @@
   rtx temp2;
 
   if (GET_CODE (operands[2]) != CONST_INT
-      || INTVAL (operands[2]) < 0
+      || INTVAL (operands[2]) <= 0
       || (i = exact_log2 (INTVAL (operands[2]))) < 0)
     FAIL;
 
@@ -5812,7 +5812,7 @@
 		   ? operands[0] : gen_reg_rtx (DImode));
 
 	HOST_WIDE_INT val = INTVAL (operands[2]);
-	HOST_WIDE_INT low = (val & 0xffff) - 2 * (val & 0x8000);
+	HOST_WIDE_INT low = ((val & 0xffff) ^ 0x8000) - 0x8000;
 	HOST_WIDE_INT rest = trunc_int_for_mode (val - low, DImode);
 
 	if (!CONST_OK_FOR_LETTER_P (rest, 'L'))
@@ -5915,7 +5915,7 @@
 "
 {
   HOST_WIDE_INT val = INTVAL (operands[2]);
-  HOST_WIDE_INT low = (val & 0xffff) - 2 * (val & 0x8000);
+  HOST_WIDE_INT low = ((val & 0xffff) ^ 0x8000) - 0x8000;
   HOST_WIDE_INT rest = trunc_int_for_mode (val - low, DImode);
 
   operands[4] = GEN_INT (low);
@@ -7769,7 +7769,7 @@
   ""
   "")
 
-(define_insn ""
+(define_insn "*movcc_internal1"
   [(set (match_operand:CC 0 "nonimmediate_operand" "=y,x,y,r,r,r,r,m")
 	(match_operand:CC 1 "nonimmediate_operand" "y,r,r,x,y,r,m,r"))]
   "register_operand (operands[0], CCmode)
@@ -7884,7 +7884,7 @@
   operands[4] = (value & 0x80000000) ? constm1_rtx : const0_rtx;
 #else
   operands[4] = GEN_INT (value >> 32);
-  operands[1] = GEN_INT ((value & 0x7fffffff) - (value & 0x80000000));
+  operands[1] = GEN_INT (((value & 0xffffffff) ^ 0x80000000) - 0x80000000);
 #endif
 }")
 
@@ -8370,7 +8370,7 @@
   operands[4] = (value & 0x80000000) ? constm1_rtx : const0_rtx;
 #else
   operands[4] = GEN_INT (value >> 32);
-  operands[1] = GEN_INT ((value & 0x7fffffff) - (value & 0x80000000));
+  operands[1] = GEN_INT (((value & 0xffffffff) ^ 0x80000000) - 0x80000000);
 #endif
 }")
 
@@ -10445,7 +10445,7 @@
      with C to get the sign-extended value.  */
 
   HOST_WIDE_INT c = INTVAL (operands[2]);
-  HOST_WIDE_INT sextc = (c & 0x7fff) - (c & 0x8000);
+  HOST_WIDE_INT sextc = ((c & 0xffff) ^ 0x8000) - 0x8000;
   HOST_WIDE_INT xorv = c ^ sextc;
 
   operands[4] = GEN_INT (xorv);
