* contrib/texi2pod.pl: Handle @include, @ftable, @vtable. 	Reformat some code for clarity. 	* gcc/Makefile.in: Give texi2pod its input file as a command 	line argument, not on stdin.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50660 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-12  Zack Weinberg  <zack@codesourcery.com>
+
+	* Makefile.in: Give texi2pod its input file as a command
+	line argument, not on stdin.
+
 2002-03-12  Andrew MacLeod  <amacleod@redhat.com>
 
 	* config/sparc/sparc.h (RETURN_ADDR_RTX): Include v9 stack bias in
