--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-03-12  Bob Wilson  <bob.wilson@acm.org>
 
+	* config/xtensa/t-xtensa (CRTSTUFF_T_CFLAGS_S): Define.
+
+2002-03-12  Bob Wilson  <bob.wilson@acm.org>
+
 	* config/xtensa/xtensa.h (ASM_OUTPUT_POOL_PROLOGUE): Switch
 	to function_section before writing out the constant pool.
 
