--- a/gcc-3_1-branch/ChangeLog
+++ b/gcc-3_1-branch/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-12  Bob Wilson  <bob.wilson@acm.org>
+
+	* MAINTAINERS: Add myself as maintainer for xtensa port.
+	Fix alphabetical order in CPU port maintainer list.
+	Remove myself from Write After Approval list.
+
 2002-03-11  Richard Henderson  <rth@redhat.com>
 
 	* Makefile.in (.NOTPARALLEL): Add fake tag.
